@@ -1,6 +1,5 @@
 <?xml version="1.0"?>
 <object name="portal_javascripts" meta_type="JavaScripts Registry">
- <javascript cacheable="True" compression="safe" cookable="True"
-    enabled="False" expression="" id="eXtreme.js" inline="False"
+ <javascript enabled="False" expression="" id="eXtreme.js"
     authenticated="False" remove="True"/>
 </object>
