@@ -218,7 +218,7 @@ class CSSRegistryTool(BaseRegistryTool):
 
         Updates the whole sequence. For editing and reordering.
         """
-        debugmode = REQUEST.get('debugmode',False)
+        debugmode = REQUEST.get('debugmode', False)
         self.setDebugMode(debugmode)
         autogroupingmode = REQUEST.get('autogroupingmode', False)
         self.setAutoGroupingMode(autogroupingmode)
