@@ -131,7 +131,7 @@ class KSSRegistryTool(BaseRegistryTool):
 
         Updates the whole sequence. For editing and reordering.
         """
-        debugmode = REQUEST.get('debugmode',False)
+        debugmode = REQUEST.get('debugmode', False)
         self.setDebugMode(debugmode)
         autogroupingmode = REQUEST.get('autogroupingmode', False)
         self.setAutoGroupingMode(autogroupingmode)
